<resources>
    <string name="app_name" translatable="false">PortaFIBapp</string>

    <string name="channel_id" translatable="false">es.caib.portafib.app</string>
    <string name="channel_name" translatable="false">PortaFIBapp</string>

    <string name="channel_description">PortaFIBapp notifications</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="connexio_header">Connection</string>

    <string name="server_baseurl_title">Server address</string>
    <string name="client_alias_cert_title">Client certificate</string>
    <string name="client_alias_cert_sw_title">Select client certificate</string>
    <string name="notificacions_sw_title">Activate notifications</string>
    <string name="notificacions_header">Notifications</string>
    <string name="title_install_cert">Install certificate</string>

    <string name="role_destinatari">Recipient</string>
    <string name="role_delegat">Delegate</string>
    <string name="role_colaborador">Contributor</string>
    <string name="role_solicitant">Applicant</string>
    <string name="role_revisor">Reviser</string>

    <string name="notificacio_pendent_message">%1$s: You have %2$d pending petitions</string>
    <string name="error_notificacions_message">There was an error getting pending petitions, please review settings (%1$s)</string>
    <string name="title_update">Update petitions</string>
    <string name="auth_server_sw_title">Use authentication server</string>
    <string name="auth_server_url_title">Auth server address</string>

</resources>